[project]
name = "taskflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.136.3",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
